--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.1",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.0-rc1",
     "morgan": "~1.9.0",
